<resources>
    <string name="app_name">Homework4</string>
    <string name="calc">calculate</string>


    <string name="hint">&#8230;</string>
    <string name="num">3</string>
    <string name="pl">+</string>
    <string name="edit">etOp</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="choose">Choose operation</string>
    <string name="empty"> </string>
    <string name="count">Count</string>
</resources>
