<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.Theme.AppCompat.Light.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="thinkmobile.com.homework4.MainActivity">

    <TextView
        android:id="@+id/switchStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp" />
    <TextView
        android:id="@+id/text_view_a"
        style="@style/NumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_text_operation"
        android:layout_toStartOf="@+id/edit_text_operation"
        android:layout_toLeftOf="@+id/edit_text_operation"
        android:hint="@string/a"/>
    <TextView
        android:id="@+id/text_view_b"
        style="@style/NumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_text_operation"
        android:layout_toRightOf="@+id/edit_text_operation"
        android:layout_toEndOf="@+id/edit_text_operation"
        android:hint="@string/b"/>
    <EditText
        android:id="@+id/edit_text_operation"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:maxLength="1"
        android:text="@string/pl"/>

    <Button
        android:id="@+id/button_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_operation"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/numSize"
        android:textAllCaps="true"
        android:padding="30dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/calc"/>
    <TextView
        android:id="@+id/text_result"
        style="@style/NumStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_numSize"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_calc"
        android:text="@string/num"/>
    <Switch
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_result"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textOff="day"
        android:textOn="night"/>
</RelativeLayout>
